# wiser

./: .gitignore  README.OLD.md  README.md
data/: README.md  generate_synthetic_log.py  get-AOL-query.sh  get-wiki-query.sh
data/AOL_QueryLog_analysis/: popular_2_terms.txt  popular_terms.txt  stat.txt
scripts/: README.md  analyze_query_log.py  calculate_block_distribution.py  calculate_page_misalignment.py  check_quality.py  clean.py  clean_popular_ngrams.py  compilesentencebreakers.sh  cpp.out  download-lucene.sh  elasticsearch_highlighter_bench.py  filter_non_printable.py  generate_linedoc.py  generate_popular_two_terms_query.py  generate_querylog_based_on_term_database.py  generate_querylog_with_no_repeated_terms.py  generate_term_database.py  generate_xml_for_rs_bench_go.py  get-AOL.sh  get-Indri.sh  get-Zambezi.sh  get-query-log.sh  get-wiki.sh  install-elasticsearch-dsl.sh  install-go.sh  install-java.sh  java.out  multi_tokenize.sh  parse_iostat_results.py  parse_linedoc_4_Zambezi.py  parse_linedoc_4_indri.py  parse_query_log.py  parse_querylog_4_indri.py  run-benchmark.sh  run-demo.py  run-quries.sh  run-wikipedia-by-linefile.sh  run-wikipedia.sh  sentencebreaker  sentencebreaker.cpp  (+13 more)
scripts/conf/: create-line-file.alg  index-line-file-2.alg  wikipedia2.alg
scripts/redis_benchmark/: get_benchmark.sh  memcached_multi.sh  multi_instance_bench.py  overall_bench.sh  populate.sh  start_memcached.sh  start_redis_server.sh  stop_memcached.sh  stop_redis_server.sh
scripts/redis_benchmark/pymemtier/: async_client.py  client.py  multi_process_sync_memtier.py  multi_process_test.py  output  pymemtier.py  simple_sync_memtier.py
scripts/tools_for_bench_redis_elastic/: cat_results.sh  elastic_kill.sh  elastic_run.sh  elastic_start.sh  out.csv  redis_kill.sh  redis_start.sh
src/bench_driver/: README.md  algs.py  config.py  driver.py  esbench.py  expbase.py  utils.py
src/engine_c/: README
src/engine_c/posting_list/: Makefile  Posting_List.cc  Posting_List.h  Posting_List_Raw.h  Posting_List_backup.h  direct_test.cc  engine_services.h  inverted_index.cc  inverted_index.h  main_test  main_test.cc  main_test.cpp  posting_basic.cc  posting_basic.h  posting_list_direct.cc  posting_list_direct.h  posting_list_protobuf.cc  posting_list_protobuf.h  posting_list_raw.cc  posting_list_raw.h  posting_message.pb.cc  posting_message.pb.h  posting_message.proto  raw_test  raw_test.cc
src/engine_c/posting_list/varint/: varint.cc  varint.h
src/highlighter/: Makefile  highlighter.cc  highlighter.h  testmain  testmain.cc
src/in_mem/: Makefile  README.md  index_dir.py  search_engine.py  test.py  test_wiki.py
src/lucene/benchmark/src/java/org/apache/lucene/benchmark/byTask/feeds/: SimpleQueryMaker.java  WikiQueryMaker.java
src/lucene/docs/changes/: Changes.html
src/pysrc/: Makefile  README.md  setup_env.sh
src/pysrc/bench_driver/: config.py  driver.py  esbench.py  go_rsbench.py  redisearch_bench.py  start_redis_server.py  test_esbench.py  test_redisbench.py
src/pysrc/benchmarks/: Clients.py  README.md  algs.py  es_bench.py  es_client.py  expbase.py  go_rsbench.py  lucene_bench.py  pybench.py  rs_bench_go.py  start_redis_server.py  test_esbench.py  test_rsbench.py
src/pysrc/in_mem/: README.md  search_engine.py  test.py  test_wiki.py  wiki.py
src/pysrc/in_mem/testdata/: linedoc-sample  linedoc-with-tokens-sample
src/pysrc/tools/: add_date.py  cleanup_query_log.py  perf_redis.py  wikiabs_to_linedoc.py
src/pysrc/utils/: expbase.py  generate.py  test_utils.py  utils.py
src/qq_mem/: Makefile  README.md  build.sh  install-boost.sh  log  log_two  run_client_server.sh  runtest.sh  setup-client.sh  setup-server.sh  setup.sh
src/qq_mem/misc/: jvm.options.template
src/qq_mem/src/: CMakeLists.txt  Posting_List.h  Posting_List_Raw.h  bloom_filter.h  catch_main.cc  check_posting_list.cc  client.cc  compression.h  compression_bench.cc  convert_qq_to_vacuum.cc  create_bloom_store.cc  create_qq_mem_dump.cc  doc_length_store.h  doc_store.h  engine_bench.cc  engine_factory.h  engine_loader.cc  engine_loader.h  engine_services.h  engine_services.hh  file_dumper.h  flash_containers.h  flash_engine_dumper.cc  flash_engine_dumper.h  flash_iterators.cc  flash_iterators.h  flashreader.cc  general_config.h  greeter_server.cc  grpc_bench.cc  grpc_client_impl.cc  grpc_client_impl.h  grpc_server_impl.cc  grpc_server_impl.h  grpc_service_impl.h  hash_benchmark.cc  hash_benchmark.h  highlighter.cc  highlighter.h  histogram.h  (+90 more)
src/qq_mem/src/libbloom/: bloom.c  bloom.h  test  test.c
src/qq_mem/src/protos/: posting_message.proto  qq.proto
src/qq_mem/src/testdata/: all-tokens.txt  enwiki-abstract_tokenized.linedoc.sample  iter_test_3_docs  iter_test_3_docs_tf  iter_test_3_docs_tf_bi-bloom  iter_test_3_docs_tf_phrases  line_doc.with-bloom.toy  line_doc.with-bloom.toy-phrases  line_doc_offset  line_doc_with_positions  one_word_with_position  query-log-sample.txt  query_log_with_phrases  show_cols.py  simple_line_doc_offset  test_doc_tokenized  tokenized_wiki_abstract_line_doc  wiki_linedoc.toy.pre-suf-bloom
src/qq_mem/src/tsl/: htrie_hash.h
src/qq_mem/test_dir/: fdt  fdx  simple_test  simple_test.c
src/qq_mem/tools/: Makefile  README.md  add-quotes.py  analyze-repeat.py  anotate-blktrace.py  count_occurances.py  count_pagefaults.py  divide_blktrac_to_files.py  es_index_docs.py  fast_window.py  fio.py  gen_synthetic_log.py  gen_synthetic_log_reddit.py  gen_term_hist.py  hist_stats.py  indexer.py  line-of-code.py  parse_traffic_log.py  pop_stats.py  query_locality.py  reread.py  run_client_server.py  run_client_server2.py  run_cs_two_nodes.py  run_elastic_two_nodes.py  run_elastic_two_nodes_check_heap_caching.py  run_es_two_nodes.py  run_exp.py  run_exp_es.py  run_exp_local.py  run_vacuum_two_nodes.py  sync-query-to-client.sh  tests.py  top_terms.py  traffic_analysis.py  watch-croup.sh  watch-iostat.sh  zone-docfreq-corr.py
src/tutorials/: HelloLucene.java  HelloWorld.java  Makefile
src/utils/: utils.py
(+1 files in other folders)
